@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: version.c,v 1.33.2.5 2000/06/14 00:38:37 joze Exp $"); }
+static char *RCSid() { return RCSid("$Id: version.c,v 1.33.2.6 2000/06/23 13:28:24 joze Exp $"); }
 #endif
 
 /* GNUPLOT - version.c */
@@ -37,8 +37,8 @@ static char *RCSid() { return RCSid("$Id: version.c,v 1.33.2.5 2000/06/14 00:38:
 #include "syscfg.h"
 
 const char gnuplot_version[] = "3.8c";
-const char gnuplot_patchlevel[] = "pm3d 5";
-const char gnuplot_date[] = "Wed, 14 Jun 2000 02:33:43 +0200";
+const char gnuplot_patchlevel[] = "pm3d 6";
+const char gnuplot_date[] = "Fri, 23 Jun 2000 15:24:46 +0200";
 const char gnuplot_copyright[] = "Copyright(C) 1986 - 1993, 1999, 2000";
 
 const char faq_location[] = FAQ_LOCATION;
